Highly rewrite POSIX semaphore.  Use file descriptor subsystem, greatly simplify reference counting, and fix various bugs which existed before, e.g. some incorrect locking or mq_unlink() not checking for permissions.

Also, fixes PR/43452.